Bug fix and new Dark theme.